fix: welcome div alignment for mobile screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -479,7 +479,6 @@ label {
     display: flex;
     justify-content: space-between;
     width: 90%;
-    margin: auto;
   }
 
   .welcome-heading {
